[package]
name = "jusibe-rs"
version = "0.1.0"
authors = ["Johnbosco Ohia <johnboscoohia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = {version = "1", features = ["attributes"]}

[dev-dependencies]
httpmock = "0.5.5"